--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>¡Buenos días!</h1>
+<p>Esta es la página web de Joan Castells Appriou, hecha posible gracias a GitHub.</p>
 </body>
 </html>
