Archivo editado: index.html
Se ha empezado a extender con respecto a los contenidos de la propia página.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>La Casa del Mono<title>
 <body>
 <h1>¡Buenos días!</h1>
 <p>Esta es la página web de Joan Castells Appriou, hecha posible gracias a GitHub.</p>
+<h2>¿De qué va esto?</h2>
+<p>Pues resulta que es un trabajo de clase. Sin embargo, sin embargo, es un planteamiento interesante que podría llegar a usar en el futuro, como asunto personal.<p>
 </body>
 </html>
