Limpieza de bugs

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>La Casa del Mono<title>
+<title>La Casa del Mono</title>
 <body>
 <h1>¡Buenos días!</h1>
 <p>Esta es la página web de Joan Castells Appriou, hecha posible gracias a GitHub.</p>
