--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 <title>La Casa del Mono</title>
 <body>
-<h1>¡Buenos días!</h1>
-<p>Esta es la página web de Joan Castells Appriou, hecha posible gracias a GitHub.</p>
-<h2>¿De qué va esto?</h2>
-<p>Pues resulta que es un trabajo de clase. Sin embargo, sin embargo, es un planteamiento interesante que podría llegar a usar en el futuro, como asunto personal.<p>
+<h1 align="center" style="font-family: Brush Script MT">La Casa </br> Del Mono</h1>
+<h1 style="font-family: Verdana">¡Buenos días!</h1>
+<p style="font-family: Verdana">Esta es la página web de Joan Castells Appriou, hecha posible gracias a GitHub.</p>
+<h2 style="font-family: Verdana">¿De qué va esto?</h2>
+<p style="font-family: Verdana">Pues resulta que es un trabajo de clase. Sin embargo, sin embargo, es un planteamiento interesante que podría llegar a usar en el futuro, como asunto personal.<p>
 </body>
 </html>
