--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>La Casa del Mono</title>
-<body>
-<h1 align="center" style="font-family: Brush Script MT">La Casa </br> Del Mono</h1>
-<h1 style="font-family: Verdana">¡Buenos días!</h1>
-<p style="font-family: Verdana">Esta es la página web de Joan Castells Appriou, hecha posible gracias a GitHub.</p>
-<h2 style="font-family: Verdana">¿De qué va esto?</h2>
-<p style="font-family: Verdana">Pues resulta que es un trabajo de clase. Sin embargo, sin embargo, es un planteamiento interesante que podría llegar a usar en el futuro, como asunto personal.<p>
+<body style="background-color: #000000">
+<h1 align="center" style="font-size: 40px; font-family: Brush Script MT; color: #FFFFFF; background-color: #961B00">La Casa </br> Del Mono</h1>
+<h1 style="font-family: Verdana; color: #FFFFFF">¡Buenos días!</h1>
+<p style="font-family: Verdana; color: #FFFFFF">Esta es la página web de Joan Castells Appriou, hecha posible gracias a GitHub.</p>
+<h2 style="font-family: Verdana; color: #FFFFFF">¿De qué va esto?</h2>
+<p style="font-family: Verdana; color: #FFFFFF">Pues resulta que es un trabajo de clase. Sin embargo, sin embargo, es un planteamiento interesante que podría llegar a usar en el futuro, como asunto personal.<p>
 </body>
 </html>
