Archivo editado: index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <p style="font-family: Verdana; color: #FFFFFF">Esta es la página web de Joan Castells Appriou, hecha posible gracias a GitHub.</p>
 <h2 style="font-family: Verdana; color: #FFFFFF">¿De qué va esto?</h2>
 <p style="font-family: Verdana; color: #FFFFFF">Pues resulta que es un trabajo de clase. Sin embargo, sin embargo, es un planteamiento interesante que podría llegar a usar en el futuro, como asunto personal.<p>
+<h2 align="center" style="font-family: Verdana; color: #FFFFFF">Enlaces de importancia:</h2>
+<a href="https://www.worldanvil.com/w/ad-arun-nosthrend">Página de WorldAnvil</a>
 </body>
 </html>
