--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <title>La Casa del Mono</title>
 <body style="background-color: #000000">
 <h1 align="center" style="font-size: 40px; font-family: Brush Script MT; color: #FFFFFF; background-color: #961B00">La Casa </br> Del Mono</h1>
-<h1 style="font-family: Verdana; color: #FFFFFF">¡Buenos días!</h1>
-<p style="font-family: Verdana; color: #FFFFFF">Esta es la página web de Joan Castells Appriou, hecha posible gracias a GitHub.</p>
-<h2 style="font-family: Verdana; color: #FFFFFF">¿De qué va esto?</h2>
-<p style="font-family: Verdana; color: #FFFFFF">Pues resulta que es un trabajo de clase. Sin embargo, sin embargo, es un planteamiento interesante que podría llegar a usar en el futuro, como asunto personal.<p>
+<h1 align="center" style="font-family: Verdana; color: #FFFFFF">¡Buenos días!</h1>
+<p align="center" style="font-family: Verdana; color: #FFFFFF">Esta es la página web de Joan Castells Appriou, hecha posible gracias a GitHub. Este será el nexo de mis tanteos en el territorio del HTML.</p>
+<h2 align="center" style="font-family: Verdana; color: #FFFFFF">¿De qué va esto?</h2>
+<p style="font-family: Verdana; color: #FFFFFF">Pues resulta que es un trabajo de clase. Sin embargo, sin embargo, es un planteamiento interesante que podría llegar a usar en el futuro, como asunto personal. Podría, por ejemplo, utilizar este medio como publicidad para mis proyectos alternativos, podría usarlo para crear una página de presentación interesante, podría publicar imágenes de capibaras. No infinitas, pero sí muchas posibilidades, y decido llamar a este lugar La Casa Del Mono, cosa que considero a la vez que apropiada en circunstancia impertinente en formalidad. Un asunto a discutir con respecto al futuro de este lugar.<p>
 <h2 align="center" style="font-family: Verdana; color: #FFFFFF">Enlaces de importancia:</h2>
 <a align="center" href="https://www.worldanvil.com/w/ad-arun-nosthrend" style="font-size: 12px; font-family: Verdana; color: #FFFFFF">Página de WorldAnvil</a>
 </body>
