--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <h2 align="center" style="font-family: Verdana; color: #FFFFFF">Enlaces de importancia:</h2>
 <a href="https://www.worldanvil.com/w/ad-arun-nosthrend" style="font-size: 12px; font-family: Verdana; color: #FFFFFF">Página de WorldAnvil</a>
 <a href="https://www.nationalgeographic.com.es/animales/monos/fotos/1/3" style="font-size: 12px; font-family: Verdana; color: #FFFFFF">Fotos de monos, AKA, monkes.</a>
-<img src="wrye_monke.jpg"/>
+<img border="4px" src="wrye_monke.jpg" alt="Monke iluminado" height="150%" width="150%"/>
 </body>
 </html>
