--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <h2 align="center" style="font-family: Verdana; color: #FFFFFF">¿De qué va esto?</h2>
 <p style="font-family: Verdana; color: #FFFFFF">Pues resulta que es un trabajo de clase. Sin embargo, sin embargo, es un planteamiento interesante que podría llegar a usar en el futuro, como asunto personal. Podría, por ejemplo, utilizar este medio como publicidad para mis proyectos alternativos, podría usarlo para crear una página de presentación interesante, podría publicar imágenes de capibaras. No infinitas, pero sí muchas posibilidades, y decido llamar a este lugar La Casa Del Mono, cosa que considero a la vez que apropiada en circunstancia impertinente en formalidad. Un asunto a discutir con respecto al futuro de este lugar.<p>
 <h2 align="center" style="font-family: Verdana; color: #FFFFFF">Enlaces de importancia:</h2>
-<a href="https://www.worldanvil.com/w/ad-arun-nosthrend" style="font-size: 12px; font-family: Verdana; color: #FFFFFF">Página de WorldAnvil</a>
-<a href="https://www.nationalgeographic.com.es/animales/monos/fotos/1/3" style="font-size: 12px; font-family: Verdana; color: #FFFFFF">Fotos de monos, AKA, monkes.</a>
-<img border="4px" src="wrye_monke.jpg" alt="Monke iluminado" height="150%" width="150%"/>
+<a href="https://www.worldanvil.com/w/ad-arun-nosthrend" style="font-size: 12px; font-family: Verdana; color: #FFFFFF">Página de WorldAnvil</a></br>
+<a href="https://www.nationalgeographic.com.es/animales/monos/fotos/1/3" style="font-size: 12px; font-family: Verdana; color: #FFFFFF">Fotos de monos, AKA, monkes.</a></br>
+<img border="4px" src="wrye_monke.jpg" alt="Monke iluminado" height="450%" width="450%"/>
 </body>
 </html>
