--- a/index.html
+++ b/index.html
@@ -14,5 +14,18 @@
 <a href="https://www.worldanvil.com/w/ad-arun-nosthrend" style="font-size: 12px; font-family: Verdana; color: #FFFFFF">Página de WorldAnvil</a></br>
 <a href="https://www.nationalgeographic.com.es/animales/monos/fotos/1/3" style="font-size: 12px; font-family: Verdana; color: #FFFFFF">Fotos de monos, AKA, monkes.</a></br>
 <img border="4px" src="wrye_monke.jpg" alt="Monke iluminado" height="15%" width="15%"/>
+
+<h2 align="center" style="font-family: Verdana; color: #FFFFFF">¿Cosas que me gustan?</h2>
+<ol>
+
+<li style="font-family: Verdana; color: #FFFFFF"> La gente amable </li>
+<li style="font-family: Verdana; color: #FFFFFF"> Los animales bellos que no son excesivamente adorados </li>
+<li style="font-family: Verdana; color: #FFFFFF"> Las personas que inventan muchas cosas, esas cosas no son mentiras </li>
+<li style="font-family: Verdana; color: #FFFFFF"> Las invenciones de las personas. Son divertidas o interesantes, a veces las dos, casi siempre respetables </li>
+<li style="font-family: Verdana; color: #FFFFFF"> Las ganas de crear y hacer </ li>
+<li style="font-family: Verdana; color: #FFFFFF"> La gente que tiene mucha intención y ganas de hacer, sueños, objetivos claros </li>
+<li style="font-family: Verdana; color: #FFFFFF"> Los primeros días de vacaciones </li>
+
+</ol>
 </body>
 </html>
