Archivo editado: index.html

--- a/index.html
+++ b/index.html
@@ -27,5 +27,25 @@
 <li style="font-family: Verdana; color: #FFFFFF"> Los primeros días de vacaciones </li>
 
 </ol>
+<h2 align="center" style="font-family: Verdana; color: #FFFFFF">Ahora una tabla con nombres que me acabo de inventar ahora mismo:     ...    Me gustan los nombres.</h2>
+</br>
+<table border="1px">
+<tr>
+<th style="font-family: Verdana; color: #FFFFFF"> Thunn </th>
+<th style="font-family: Verdana; color: #FFFFFF"> Doyra </th>
+<th style="font-family: Verdana; color: #FFFFFF"> Ukrubal </th>
+<th style="font-family: Verdana; color: #FFFFFF"> Neyedri </th>
+<th style="font-family: Verdana; color: #FFFFFF"> Sasedide </th>
+</tr>
+
+<tr>
+<td style="font-family: Verdana; color: #FFFFFF"> Móenan  </td>
+<td style="font-family: Verdana; color: #FFFFFF"> Lúcenín </td>
+<td style="font-family: Verdana; color: #FFFFFF"> Xustalu </td>
+<td style="font-family: Verdana; color: #FFFFFF"> Brennaic </td>
+<td style="font-family: Verdana; color: #FFFFFF"> Krintrumaz </td>
+</tr>
+
+</table>
 </body>
 </html>
