Cosas, no tengo tiempo

--- a/pruebatemplate.html
+++ b/pruebatemplate.html
@@ -63,7 +63,7 @@
         </div>
       </nav>
       <section class="py-0" id="home">
-        <div class="bg-holder d-none d-md-block" style="background-image:url(assets/img/illustrations/hero-section.png);background-position:right bottom;background-size:contain;">
+        <div class="bg-holder d-none d-md-block" style="background-image:url(assets/img/illustrations/common_monkes.jpg);background-position:right bottom;background-size:contain;">
         </div>
         <!--/.bg-holder-->
 
