--- a/mainhub.html
+++ b/mainhub.html
@@ -51,8 +51,7 @@
               <li class="nav-item"><a class="nav-link" href="#forums">Foros</a></li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Otros:</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="OBSCURE.html">Sobre el propietario</a></li>
-                  <li><a class="dropdown-item" href="#">Another action </a></li>
+                  <li><a class="dropdown-item" href="portfolio.html">Sobre el propietario</a></li>
                 </ul>
               </li>
             </ul>
