--- a/portfolio.html
+++ b/portfolio.html
@@ -42,12 +42,12 @@
 
 
 
-	<section class="site-hero" style="background-image: url(images/image_1.jpg);" id="section-home" data-stellar-background-ratio="0.5">
+	<section class="site-hero" style="background-image: url(images/ProfessionalSitDefin.png);" id="section-home" data-stellar-background-ratio="0.5">
 		<div class="container">
 			<div class="row intro-text align-items-center justify-content-center">
 				<div class="col-md-10 text-center pt-5">
 
-					<h1 class="site-heading site-animate">Hola, me llamo <strong class="d-block">Joan Castells Appriou</strong></h1>
+					<h1 class="site-heading site-animate">Hola, soy <strong class="d-block">Joan Castells Appriou</strong></h1>
 					<strong class="d-block text-white text-uppercase letter-spacing">y este es mi portfolio</strong>
 
 				</div>
@@ -87,7 +87,7 @@
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> Junio 2019 - Actualidad</span>
-						<h3>Co-desarrollador Narrativo en Jefe</h3>
+						<h3>Co-desarrollador y Desarrollador Narrativo</h3>
 						<p>Experiencia avanzada en el desarrollo de narrativa enfocada a contenido audiovisual específico.</p>
 						<span class="school">Equipo de desarrollo de "Proyecto Ad'Arun"</span>
 					</div>
@@ -96,7 +96,7 @@
 						<span class="date"><span class="icon-calendar"></span> Noviembre 2021 - Actualidad</span>
 						<h3>Asistente Diseñador de Gameplay</h3>
 						<p>Experiencia amateur en la creación de propuestas de diseño enfocadas a la creación de contenido audiovisual interactivo.</p>
-						<span class="school">Equipo de desarrollo de "Proyecto Profeta"</span>
+						<span class="school">Equipo de desarrollo de "Proyecto Profeta" y "Adaptación RPG - Karemor"</span>
 					</div>
 
 				</div>
@@ -105,11 +105,95 @@
 	</section>
 	<!-- .section -->
 
+	<section class="site-section" id="section-portfolio">
+		<div class="container">
+			<div class="row">
+				<div class="section-heading text-center col-md-12">
+					<h2>Destacados <strong>del Portfolio</strong></h2>
+				</div>
+			</div>
+
+			<div class="filters-content">
+				<div class="row grid">
+					<div class="single-portfolio col-sm-4 all mockup">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="images/GranEnciclopedia.png" alt="">
+							</div>
+							<a href="images/GranEnciclopedia.png" class="img-pop-up">  
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a>                                  
+						</div>
+						<div class="p-inner">
+							<h4>La Gran Enciclopedia del Saber Sobre el Universo</h4>
+							<div class="cat">Escritura - Estudio de Worldbuilding</div>
+						</div>                                         
+					</div>
+					<div class="single-portfolio col-sm-4 all mockup">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="images/TheNuke.png" alt="">
+							</div>
+							<a href="images/TheNuke.png" class="img-pop-up">  
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a>                                  
+						</div>
+						<div class="p-inner">
+							<h4>"La Desgracia"</h4>
+							<div class="cat">Ilustración realizada a motivo de estudio artístico de Fallout</div>
+						</div>                                         
+					</div>                            
+					<div class="single-portfolio col-sm-4 all packaging">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="images/ProyectoGradenia.png" alt="">
+							</div>
+							<a href="images/ProyectoGradenia.png" class="img-pop-up">  
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a> 
+
+						</div>
+						<div class="p-inner">
+							<h4>Proyecto Gradenia</h4>
+							<div class="cat">Unos primeros pasos en la producción audiovisual del sector</div>
+						</div>
+					</div>
+					<div class="single-portfolio col-sm-4 all packaging">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="images/LegadoDelHermano.png" alt="">
+							</div>
+							<a href="images/LegadoDelHermano.png" class="img-pop-up">  
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a>                                
+						</div> 
+						<div class="p-inner">
+							<h4>"El Legado del Hermano"</h4>
+							<div class="cat">Una primeriza incursión en la literatura, aún en desarrollo</div>
+						</div>
+					</div>					
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section class="site-section" id="section-about">
 		<div class="container">
 			<div class="row mb-5 align-items-center">
 				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
-					<img src="images/image_1.jpg" alt="Image placeholder" class="img-fluid">
+					<img src="images/Ilustraciones.png" alt="Image placeholder" class="img-fluid">
 				</div>
 				<div class="col-lg-5 pl-lg-5">
 					<div class="section-heading">
@@ -144,7 +228,7 @@
 							<span class="icon-browser2"></span>
 						</span>
 						<h3 class="mb-4">Escritura y diseño narrativo</h3>
-						<p>Dedicado en la creación de narrativa enfocada a diferentes medios, con un gran énfasis en storytelling y creación de escenarios.</p>
+						<p>Especializado en la creación de narrativa enfocada a diferentes medios, con un gran énfasis en storytelling y creación de escenarios.</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
@@ -153,7 +237,7 @@
 							<span class="icon-presentation"></span>
 						</span>
 						<h3 class="mb-4">Diseño teórico orientado al gameplay</h3>
-						<p>Especializado en la elaboración de técnicas de entretenimiento e interactividad en el medio de los videojuegos.</p>
+						<p>Dedicado en la elaboración de técnicas de entretenimiento e interactividad en el medio de los videojuegos.</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
@@ -165,9 +249,6 @@
 						<p>Capaz en el campo de la ilustración conceptual u otros, además de diseño gráfico y audiovisual. </p>
 					</div>
 				</div>
-
-				
-
 			</div>
 		</div>
 	</section>
@@ -219,10 +300,8 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<a href="https://www.facebook.com/john.castells.1" target="_blank" class="social-item"><span class="icon-facebook2"></span></a>
-						<a href="#" class="social-item"><span class="icon-twitter"></span></a>
-						<a href="#" class="social-item"><span class="icon-instagram2"></span></a>
-						<a href="#" class="social-item"><span class="icon-linkedin2"></span></a>
-						<a href="#" class="social-item"><span class="icon-vimeo"></span></a>
+						<a href="https://twitter.com/JoanAdArun" class="social-item"><span class="icon-twitter"></span></a>
+						<a href="https://www.linkedin.com/in/joan-castells-appriou-2a6583171/" class="social-item"><span class="icon-linkedin2"></span></a>
 					</p>
 				</div>
 			</div>
